# artificial-app

./: Cargo.toml  README.md  prompt.txt
client/: index.html
src/: main.rs
