[package]
name = "aapp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["form", "macros"] }
dotenv = "0.15.0"
reqwest = "0.12.12"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
